# video-decoder

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: build.yml
fixtures/: test_av1.ivf  test_vp9.ivf
sample/: Cargo.toml
sample/src/: main.rs
scripts/: build_ffmpeg.sh
wrapper/: Cargo.toml  build.rs
wrapper/include/: moyu_video.h
wrapper/src/: decoder.rs  ffi.rs  lib.rs
